# automate-the-boring-stuff-demo

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: coverage.yml
automate_linting_and_testing_demo/: __main__.py
automate_the_boring_stuff_demo/: __main__.py  main.py
tests/: main_test.py
