[metadata]
name = automate_the_boring_stuff_demo
version = 0.0.0
description = Demo repository using GitHub Actions and pre-commit.ci to demonstrate how to automate the linting, formatting and testing with CY systems!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0x0d/automate-the-boring-stuff-demo
author = Rodolfo Olivieri
author_email = rodolfo.olivieri3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = automate_the_boring_stuff_demo

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true
